[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/default.theme" type="Theme" id=1]
[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=3]

[node name="Lobby" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0
color = Color( 0.266667, 0.505882, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 60.0
text = "Lobby"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 370.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 288.0
margin_right = 735.0
margin_bottom = 306.0
custom_constants/vseparation = 10
custom_constants/hseparation = 50
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 5.0
margin_right = 77.0
margin_bottom = 65.0
text = "Name"
align = 2

[node name="NameTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 127.0
margin_right = 447.0
margin_bottom = 70.0
rect_min_size = Vector2( 320, 0 )
text = "Player"

[node name="IPLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 85.0
margin_right = 77.0
margin_bottom = 145.0
text = "IP"
align = 2

[node name="IPTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 127.0
margin_top = 80.0
margin_right = 447.0
margin_bottom = 150.0
rect_min_size = Vector2( 320, 0 )
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 165.0
margin_right = 77.0
margin_bottom = 225.0
text = "Port"
align = 2

[node name="PortTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 127.0
margin_top = 160.0
margin_right = 447.0
margin_bottom = 230.0
rect_min_size = Vector2( 320, 0 )
text = "32023"

[node name="Host" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 240.0
margin_right = 77.0
margin_bottom = 306.0
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 127.0
margin_top = 240.0
margin_right = 447.0
margin_bottom = 306.0
text = "Join Game"

[node name="WaitingRoom" parent="." groups=[
"WaitingRoom",
] instance=ExtResource( 2 )]
visible = false
[connection signal="text_changed" from="VBoxContainer/CenterContainer/GridContainer/NameTextbox" to="." method="_on_NameTextbox_text_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/Join" to="." method="_on_Join_pressed"]
